# nonebot-plugin-muvbot

./: .env.prod  .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_muvbot/easyreply/: __init__.py
nonebot_plugin_muvbot/igcrawler/: __init__.py  config.py
nonebot_plugin_muvbot/igcrawler/instacapture_m/: InstaPost.py  __init__.py
